Images upgrade, texts adjustment

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: landing
         <!--        TODO: DONE wiekszy font na cala stronke -->
         <header class="major">
             <h2>Drodzy goście</h2>
-            <p>Sandra Turlińska oraz Rafał Kozieł wraz z&nbsp;Rodzicami mają zaszczyt zaprosić na&nbsp;swój Ślub,
+            <p>Wraz z&nbsp;Rodzicami mamy zaszczyt zaprosić Was na&nbsp;swój Ślub,
                 <br>
                 który odbędzie się 14&nbsp;czerwca&nbsp;2025 roku o&nbsp;godzinie 16:00 w&nbsp;Sanktuarium Matki&nbsp;Bożej&nbsp;Miłosiernej
                 w&nbsp;Białej&nbsp;Rawskiej.
@@ -34,7 +34,7 @@ layout: landing
                 Po ceremonii zapraszamy do&nbsp;wspólnego świętowania.
                 <br>
                 Przyjęcie weselne odbędzie się w&nbsp;Pałacu&nbsp;Chojnata w&nbsp;Woli-Chojnata&nbsp;59.</p>
-            <p><b>Drodzy Goście, uprzejmie prosimy o&nbsp;potwierdzenie przybycia do dnia 30&nbsp;kwietnia&nbsp;2025&nbsp;roku.</b>
+            <p><b>Uprzejmie prosimy o&nbsp;potwierdzenie przybycia do dnia 30&nbsp;kwietnia&nbsp;2025&nbsp;roku.</b>
             </p>
         </header>
         <!--        <ul class="icons major">-->
@@ -51,6 +51,7 @@ layout: landing
     <section id="churchImg"
              class="wrapper style4 img-bg-responsive">
         <div class="inner">
+            <h2>Ślub</h2>
         </div>
     </section>
 
@@ -60,7 +61,7 @@ layout: landing
             {% include map.html %}
         </div>
         <div class="content py-lg-5 my-lg-5">
-            <h2>Ślub</h2>
+            <h2>Uroczystość zaślubin</h2>
             <div class="d-flex flex-column gap-2 mb-5">
                 Ślub odbędzie się 14 czerwca 2025 roku o godzinie 16:00 w Sanktuarium Matki Bożej Miłosiernej w Białej
                 Rawskiej.
@@ -85,6 +86,7 @@ layout: landing
     <section id="palaceImg"
              class="img-bg-responsive wrapper style4">
         <div class="inner">
+            <h2>Wesele</h2>
         </div>
     </section>
 
@@ -93,7 +95,7 @@ layout: landing
             {% include map-palace.html %}
         </div>
         <div class="content py-lg-5 my-lg-5">
-            <h2>Wesele</h2>
+            <h2>Przyjęcie weselne</h2>
             <div class="d-flex flex-column gap-2 mb-5">
                 Po ceremonii zapraszamy do wspólnego świętowania. Przyjęcie weselne odbędzie się w Pałacu Chojnata w
                 Woli-Chojnata 59.
@@ -128,7 +130,7 @@ layout: landing
         <header class="major">
             <h2>Fundacja</h2>
             <p>Wspólnie z Wami pragniemy pomóc. Będziemy wdzięczni, jeśli zamiast kwiatów, zdecydujecie się wesprzeć
-                naszą zbiórkę na rzecz Fundacji Dom w Łodzi. Pieniądze będziemy zbierać do puszki przed kościołem.</p>
+                naszą zbiórkę na rzecz Fundacji Dom w Łodzi. Pieniądze będziemy zbierać do puszki podczas składania życzeń.</p>
             <p>Fundacja „Dom w Łodzi” działa od sierpnia 2006 roku i jest organizacją pożytku publicznego. Powstała po
                 to, aby pomagać tym, którzy tej pomocy potrzebują bardziej niż ktokolwiek inny. Wspiera dzieci, którym
                 los odebrał nie tylko zdrowie, ale i miłość osób najbliższych. Jej celem jest stworzenie domu, w którym
@@ -145,7 +147,7 @@ layout: landing
     <div class="inner">
         <header class="major">
             <h2>Noclegi</h2>
-            <p>Zapewniamy noclegi dla wszystkich, którzy wyrażą taką chęć. Więcej informacji pojawi się bliżej terminu
+            <p>Zapewniamy noclegi lub transport dla wszystkich gości, którzy wyrażą taką chęć. Więcej informacji pojawi się bliżej terminu
                 uroczystości.</p>
             <p><b>Prosimy o potwierdzenie obecności do 30 kwietnia 2025.</b></p>
         </header>
