--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: landing
             <h2>Noclegi</h2>
             <p>Zapewniamy noclegi lub transport dla wszystkich gości, którzy wyrażą taką chęć. Więcej informacji pojawi się bliżej terminu
                 uroczystości.</p>
-            <p><b>Prosimy o potwierdzenie obecności do 30 kwietnia 2025.</b></p>
+            <p><b>Uprzejmie prrosimy o potwierdzenie obecności do 30 kwietnia 2025.</b></p>
         </header>
     </div>
 </section>
