Update sanktuarium link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: landing
                         <a href="https://maps.app.goo.gl/BdDiE9PHvxGX4gJx5"
                            target="_blank"
                            class="button small">Google maps</a>
-                        <a href="https://maps.app.goo.gl/BdDiE9PHvxGX4gJx5"
+                        <a href="https://www.sanktuariumbialarawska.pl/"
                            target="_blank"
                            class="button small">Sanktuarium</a>
                     </div>
