--- a/index.html
+++ b/index.html
@@ -147,9 +147,73 @@ layout: landing
     <div class="inner">
         <header class="major">
             <h2>Noclegi</h2>
-            <p>Zapewniamy noclegi lub transport dla wszystkich gości, którzy wyrażą taką chęć. Więcej informacji pojawi się bliżej terminu
-                uroczystości.</p>
-            <p><b>Uprzejmie prosimy o potwierdzenie obecności do 30 kwietnia 2025.</b></p>
+            <h3>Wyszukiwanie noclegu</h3>
+            <p><b>Aby odszukać swoje miejsce noclegu skorzystaj z arkusza.</b></p>
+            <a href="https://docs.google.com/spreadsheets/d/13dec0vUvAOTG1mRGlv2wZupEPoe6nLv7/edit?usp=sharing&ouid=118388648363003039549&rtpof=true&sd=true"
+               target="_blank"
+               class="button small mb-3">Wyszukiwanie noclegów</a>
+            <p>Wystarczy wpisać swoje imię lub nazwisko w żółty obszar w komórce E1, a informacja o lokalizacji noclegu powinna pojawić się w pierwszej kolumnie.</p>
+            <h3>Miejsca</h3>
+            <h4>Pałac Chojnata</h4>
+            <div class="d-flex flex-column gap-2 mb-5">
+                Główny budynek pałacu. Po przyjeździe prosimy o kontakt z recepcją w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny 13:00 w niedzielę, 15.06.
+                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
+                    Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
+                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                        <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
+                           target="_blank"
+                           class="button small">Google maps</a>
+                        <a href="https://palacchojnata.pl/ "
+                           target="_blank"
+                           class="button small">Pałac Chojnata</a>
+                    </div>
+                </div>
+            </div>
+            <h4>Willa Parkowa</h4>
+            <div class="d-flex flex-column gap-2 mb-5">
+                Budynek przy pałacu, po jego lewej stronie od wejścia. Po przyjeździe prosimy o kontakt z recepcją w budynku głównym w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny 13:00 w niedzielę, 15.06.
+                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
+                    Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
+                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                        <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
+                           target="_blank"
+                           class="button small">Google maps</a>
+                        <a href="https://palacchojnata.pl/ "
+                           target="_blank"
+                           class="button small">Willa Parkowa</a>
+                    </div>
+                </div>
+            </div>
+            <h4>Pałac Biała Rawska</h4>
+            <div class="d-flex flex-column gap-2 mb-5">
+                Zabytkowy pałac w centrum miejscowości Biała Rawska, blisko kościoła, w którym odbywa się ślub, 4 kilometry od miejsca wesela. Po przyjeździe prosimy o kontakt z recepcją w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny 12:00 w niedzielę, 15.06. Prosimy o wymeldowanie się przed przybyciem na weselny brunch.
+                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
+                    Adres: Wojska Polskiego 4, 96-230 Biała Rawska
+                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                        <a href="https://maps.app.goo.gl/k5FGMQNTiAdJonb18"
+                           target="_blank"
+                           class="button small">Google maps</a>
+                        <a href="https://www.facebook.com/p/Pa%C5%82ac-Bia%C5%82a-Rawska-100071308547545/?locale=pl_PL"
+                           target="_blank"
+                           class="button small">Willa Parkowa</a>
+                    </div>
+                </div>
+            </div>
+            <h4>Agroturystyka</h4>
+            <div class="d-flex flex-column gap-2 mb-5">
+                Agroturystyka Nad Białką w Wólce Lesiewskiej, 10 kilometrów od miejsca wesela. Po przyjeździe prosimy o kontakt z recepcją w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny 12:00 w niedzielę, 15.06. Prosimy o wymeldowanie się przed przybyciem na weselny brunch.
+                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
+                    Adres: Wólka Lesiewska 11, 96-230 Wólka Lesiewska
+                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                        <a href="https://maps.app.goo.gl/CPaYtS2Gx5GLknfaA"
+                           target="_blank"
+                           class="button small">Google maps</a>
+                        <a href="https://meteor-turystyka.pl/nadbialka-wolka-lesiewska,wolka-lesiewska.html"
+                           target="_blank"
+                           class="button small">Agroturystyka</a>
+                    </div>
+                </div>
+            </div>
         </header>
     </div>
 </section>
