--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ layout: landing
     <div class="inner">
         <header class="major">
             <h2>Plan</h2>
+            <h3>Sobota, 14 czerwca</h3>
             <p>Szczegółowy plan pojawi się bliżej terminu uroczystości.</p>
         </header>
     </div>
@@ -234,7 +235,7 @@ layout: landing
         <header class="major">
             <h2>Kontakt</h2>
             <p></p>
-            <p>W razie pytań zachęcamy do kontaktu.</p>
+            <p>W dniu uroczystości prosimy nie niepokoić Pary Młodej. Zachęcamy do kontaktu z wyznaczonymi osobami, których dane znajdują się poniżej. Dziękujemy!</p>
 
             <a id="showContactInfo"
                class="button small">Pokaż dane kontaktowe</a>
