--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ layout: landing
                         odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny
                         13:00 w
                         niedzielę, 15.06.
-                        <div class="flex-column gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
                             Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
                             <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
                                 <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
@@ -189,7 +189,7 @@ layout: landing
                         godziny
                         14:00
                         w sobotę, 14.06, wymeldowanie do godziny 13:00 w niedzielę, 15.06.
-                        <div class="flex-column gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
                             Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
                             <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
                                 <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
@@ -213,7 +213,7 @@ layout: landing
                         godziny
                         12:00
                         w niedzielę, 15.06. Prosimy o wymeldowanie się przed przybyciem na weselny brunch.
-                        <div class="flex-column gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
                             Adres: Wojska Polskiego 4, 96-230 Biała Rawska
                             <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
                                 <a href="https://maps.app.goo.gl/k5FGMQNTiAdJonb18"
@@ -236,7 +236,7 @@ layout: landing
                         14:00 w sobotę, 14.06, wymeldowanie do godziny 12:00 w niedzielę, 15.06. Prosimy o wymeldowanie
                         się
                         przed przybyciem na weselny brunch.
-                        <div class="flex-column gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
                             Adres: Wólka Lesiewska 11, 96-230 Wólka Lesiewska
                             <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
                                 <a href="https://maps.app.goo.gl/CPaYtS2Gx5GLknfaA"
