--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@ layout: landing
                target="_blank"
                class="button small mb-3">Wyszukiwanie noclegów</a>
             <p>Wystarczy wpisać swoje imię lub nazwisko w żółty obszar w komórce E1, a informacja o lokalizacji
-                miejscu zakwaterowania powinna pojawić się w pierwszej kolumnie. Poniżej znajdują się szczegoły i dokładne lokalizacje poszczególnych noclegów.</p>
+                miejscu zakwaterowania powinna pojawić się w pierwszej kolumnie. Poniżej znajdują się szczegoły i
+                dokładne lokalizacje poszczególnych noclegów.</p>
 
             <div class="d-flex flex-column gap-2 mb-5">
                 <h3>Miejsca</h3>
@@ -165,16 +166,16 @@ layout: landing
                         odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny
                         13:00 w
                         niedzielę, 15.06.
-                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex flex-column gap-2 mb-5">
                             Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
-                            <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                                <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
-                                   target="_blank"
-                                   class="button small">Google maps</a>
-                                <a href="https://palacchojnata.pl/ "
-                                   target="_blank"
-                                   class="button small">Pałac Chojnata</a>
-                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                            <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
+                               target="_blank"
+                               class="button small">Google maps</a>
+                            <a href="https://palacchojnata.pl/ "
+                               target="_blank"
+                               class="button small">Pałac Chojnata</a>
                         </div>
                     </div>
                 </div>
@@ -187,16 +188,16 @@ layout: landing
                         godziny
                         14:00
                         w sobotę, 14.06, wymeldowanie do godziny 13:00 w niedzielę, 15.06.
-                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex flex-column gap-2 mb-5">
                             Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
-                            <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                                <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
-                                   target="_blank"
-                                   class="button small">Google maps</a>
-                                <a href="https://palacchojnata.pl/ "
-                                   target="_blank"
-                                   class="button small">Willa Parkowa</a>
-                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                            <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
+                               target="_blank"
+                               class="button small">Google maps</a>
+                            <a href="https://palacchojnata.pl/ "
+                               target="_blank"
+                               class="button small">Willa Parkowa</a>
                         </div>
                     </div>
                 </div>
@@ -211,16 +212,16 @@ layout: landing
                         godziny
                         12:00
                         w niedzielę, 15.06. Prosimy o wymeldowanie się przed przybyciem na weselny brunch.
-                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex flex-column gap-2 mb-5">
                             Adres: Wojska Polskiego 4, 96-230 Biała Rawska
-                            <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                                <a href="https://maps.app.goo.gl/k5FGMQNTiAdJonb18"
-                                   target="_blank"
-                                   class="button small">Google maps</a>
-                                <a href="https://www.facebook.com/p/Pa%C5%82ac-Bia%C5%82a-Rawska-100071308547545/?locale=pl_PL"
-                                   target="_blank"
-                                   class="button small">Willa Parkowa</a>
-                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                            <a href="https://maps.app.goo.gl/k5FGMQNTiAdJonb18"
+                               target="_blank"
+                               class="button small">Google maps</a>
+                            <a href="https://www.facebook.com/p/Pa%C5%82ac-Bia%C5%82a-Rawska-100071308547545/?locale=pl_PL"
+                               target="_blank"
+                               class="button small">Willa Parkowa</a>
                         </div>
                     </div>
                 </div>
@@ -234,16 +235,16 @@ layout: landing
                         14:00 w sobotę, 14.06, wymeldowanie do godziny 12:00 w niedzielę, 15.06. Prosimy o wymeldowanie
                         się
                         przed przybyciem na weselny brunch.
-                        <div class="d-flex gap-1 justify-content-center align-self-lg-start align-items-center">
+                        <div class="d-flex flex-column gap-2 mb-5">
                             Adres: Wólka Lesiewska 11, 96-230 Wólka Lesiewska
-                            <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                                <a href="https://maps.app.goo.gl/CPaYtS2Gx5GLknfaA"
-                                   target="_blank"
-                                   class="button small">Google maps</a>
-                                <a href="https://meteor-turystyka.pl/nadbialka-wolka-lesiewska,wolka-lesiewska.html"
-                                   target="_blank"
-                                   class="button small">Agroturystyka</a>
-                            </div>
+                        </div>
+                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                            <a href="https://maps.app.goo.gl/CPaYtS2Gx5GLknfaA"
+                               target="_blank"
+                               class="button small">Google maps</a>
+                            <a href="https://meteor-turystyka.pl/nadbialka-wolka-lesiewska,wolka-lesiewska.html"
+                               target="_blank"
+                               class="button small">Agroturystyka</a>
                         </div>
                     </div>
                 </div>
