--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ layout: landing
                         <div class="d-flex flex-column gap-2 mb-5">
                             Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
                         </div>
-                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
+                        <div class="d-flex flex-column gap-2 mb-5 flex-md-row">
                             <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
                                target="_blank"
                                class="button small">Google maps</a>
