--- a/index.html
+++ b/index.html
@@ -258,8 +258,51 @@ layout: landing
     <div class="inner">
         <header class="major">
             <h2>Plan</h2>
-            <h3>Sobota, 14 czerwca</h3>
-            <p>Szczegółowy plan pojawi się bliżej terminu uroczystości.</p>
+            <div class="d-flex flex-column gap-2 mb-5">
+                <h3>Sobota, 14 czerwca</h3>
+                <p><b>14:00</b></p>
+                <p>Możliwość zameldowania w hotelu</p>
+                <p><b>15:00</b></p>
+                <p>Błogosławieństwo Młodych w Pałacu Chojnata</p>
+                <p><b>16:00</b></p>
+                <p>Ślub w Kościele w Białej Rawskiej</p>
+                <p><b>17:00</b></p>
+                <p>Czas życzeń od Gości Ślubnych</p>
+                <p><b>17:30</b></p>
+                <p>Powitanie Młodych i wspólna fotografia</p>
+                <p><b>17:30</b></p>
+                <p>Powitanie Młodych i wspólna fotografia</p>
+                <p><b>18:00</b></p>
+                <p>Obiad</p>
+                <p><b>19:00</b></p>
+                <p>Czas życzeń od Gości Weselnych</p>
+                <p><b>19:30</b></p>
+                <p>Pierwszy taniec</p>
+                <p><b>19:30</b></p>
+                <p>Pierwszy taniec</p>
+                <p><b>20:30</b></p>
+                <p>Kolacja I</p>
+                <p><b>22:00</b></p>
+                <p>Tort</p>
+                <p><b>20:30</b></p>
+                <p>Kolacja II</p>
+                <p><b>00:00</b></p>
+                <p>Oczepiny</p>
+                <p><b>00:00</b></p>
+                <p>Barszczyk</p>
+                <p><b>??:??</b></p>
+                <p>Zakończenie imprezy do ostatniego gościa na parkiecie</p>
+            </div>
+            <div class="d-flex flex-column gap-2 mb-5">
+                <h3>Niedziela, 15 czerwca</h3>
+                <p><b>11:00</b></p>
+                <p>Brunch Weselny w Pałacu Chojnata</p>
+                <p><b>12:00</b></p>
+                <p>Ostatni moment na wymeldowanie</p>
+                <p><b>15:00</b></p>
+                <p>Zakończenie</p>
+                <p><b>I żyli długo i szczęśliwie!</b></p>
+            </div>
         </header>
     </div>
 </section>
