--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ layout: landing
     <div class="inner">
         <header class="major">
             <h2>Plan</h2>
-            <div class="d-flex flex-column gap-2 mb-5">
+            <div class="d-flex flex-column gap-2 mb-4">
                 <h3>Sobota, 14 czerwca</h3>
                 <p><b>14:00</b></p>
                 <p>Możliwość zameldowania w hotelu</p>
@@ -313,7 +313,8 @@ layout: landing
         <header class="major">
             <h2>Kontakt</h2>
             <p></p>
-            <p>W dniu uroczystości prosimy nie niepokoić Pary Młodej. Zachęcamy do kontaktu z wyznaczonymi osobami,
+            <p><b>W dniu uroczystości prosimy nie niepokoić Pary Młodej.</b></p>
+            <p>Zachęcamy do kontaktu z wyznaczonymi osobami,
                 których dane znajdują się poniżej. Dziękujemy!</p>
 
             <a id="showContactInfo"
