--- a/index.html
+++ b/index.html
@@ -260,24 +260,18 @@ layout: landing
             <h2>Plan</h2>
             <div class="d-flex flex-column gap-0 mb-1">
                 <h3>Sobota, 14 czerwca</h3>
-                <p><b>14:00</b></p>
+                <p><b>14:00</b><br>Możliwość zameldowania w hotelu</p>
                 <p>Możliwość zameldowania w hotelu</p>
-                <p><b>15:00</b></p>
-                <p>Błogosławieństwo Młodych w Pałacu Chojnata</p>
                 <p><b>16:00</b></p>
                 <p>Ślub w Kościele w Białej Rawskiej</p>
                 <p><b>17:00</b></p>
                 <p>Czas życzeń od Gości Ślubnych</p>
                 <p><b>17:30</b></p>
                 <p>Powitanie Młodych i wspólna fotografia</p>
-                <p><b>17:30</b></p>
-                <p>Powitanie Młodych i wspólna fotografia</p>
                 <p><b>18:00</b></p>
                 <p>Obiad</p>
                 <p><b>19:00</b></p>
                 <p>Czas życzeń od Gości Weselnych</p>
-                <p><b>19:30</b></p>
-                <p>Pierwszy taniec</p>
                 <p><b>19:30</b></p>
                 <p>Pierwszy taniec</p>
                 <p><b>20:30</b></p>
