--- a/index.html
+++ b/index.html
@@ -261,40 +261,24 @@ layout: landing
             <div class="d-flex flex-column gap-0 mb-1">
                 <h3>Sobota, 14 czerwca</h3>
                 <p><b>14:00</b><br>Możliwość zameldowania w hotelu</p>
-                <p>Możliwość zameldowania w hotelu</p>
-                <p><b>16:00</b></p>
-                <p>Ślub w Kościele w Białej Rawskiej</p>
-                <p><b>17:00</b></p>
-                <p>Czas życzeń od Gości Ślubnych</p>
-                <p><b>17:30</b></p>
-                <p>Powitanie Młodych i wspólna fotografia</p>
-                <p><b>18:00</b></p>
-                <p>Obiad</p>
-                <p><b>19:00</b></p>
-                <p>Czas życzeń od Gości Weselnych</p>
-                <p><b>19:30</b></p>
-                <p>Pierwszy taniec</p>
-                <p><b>20:30</b></p>
-                <p>Kolacja I</p>
-                <p><b>22:00</b></p>
-                <p>Tort</p>
-                <p><b>20:30</b></p>
-                <p>Kolacja II</p>
-                <p><b>00:00</b></p>
-                <p>Oczepiny</p>
-                <p><b>00:00</b></p>
-                <p>Barszczyk</p>
-                <p><b>??:??</b></p>
-                <p>Zakończenie imprezy do ostatniego gościa na parkiecie</p>
+                <p><b>16:00</b><br>Ślub w Kościele w Białej Rawskiej</p>
+                <p><b>17:00</b><br>Czas życzeń od Gości Ślubnych</p>
+                <p><b>17:30</b><br>Powitanie Młodych i wspólna fotografia</p>
+                <p><b>18:00</b><br>Obiad</p>
+                <p><b>19:00</b><br>Czas życzeń od Gości Weselnych</p>
+                <p><b>19:30</b><br>Pierwszy taniec</p>
+                <p><b>20:30</b><br>Kolacja I</p>
+                <p><b>22:00</b><br>Tort</p>
+                <p><b>20:30</b><br>Kolacja II</p>
+                <p><b>00:00</b><br>Oczepiny</p>
+                <p><b>01:30</b><br>Barszczyk</p>
+                <p><b>??:??</b><br>Zakończenie imprezy do ostatniego gościa na parkiecie</p>
             </div>
             <div class="d-flex flex-column gap-0 mb-1">
                 <h3>Niedziela, 15 czerwca</h3>
-                <p><b>11:00</b></p>
-                <p>Brunch Weselny w Pałacu Chojnata</p>
-                <p><b>12:00</b></p>
-                <p>Ostatni moment na wymeldowanie</p>
-                <p><b>15:00</b></p>
-                <p>Zakończenie</p>
+                <p><b>11:00</b><br>Brunch Weselny w Pałacu Chojnata</p>
+                <p><b>12:00</b><br>Ostatni moment na wymeldowanie</p>
+                <p><b>15:00</b><br>Zakończenie</p>
                 <p><b>I żyli długo i szczęśliwie!</b></p>
             </div>
         </header>
