--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ layout: landing
                                class="button small">Google maps</a>
                             <a href="https://www.facebook.com/p/Pa%C5%82ac-Bia%C5%82a-Rawska-100071308547545/?locale=pl_PL"
                                target="_blank"
-                               class="button small">Willa Parkowa</a>
+                               class="button small">Pałac Biała Rawska</a>
                         </div>
                     </div>
                 </div>
@@ -260,25 +260,25 @@ layout: landing
             <h2>Plan</h2>
             <div class="d-flex flex-column gap-0 mb-1">
                 <h3>Sobota, 14 czerwca</h3>
-                <p><b>14:00</b><br>Możliwość zameldowania w hotelu</p>
-                <p><b>16:00</b><br>Ślub w Kościele w Białej Rawskiej</p>
-                <p><b>17:00</b><br>Czas życzeń od Gości Ślubnych</p>
-                <p><b>17:30</b><br>Powitanie Młodych i wspólna fotografia</p>
-                <p><b>18:00</b><br>Obiad</p>
-                <p><b>19:00</b><br>Czas życzeń od Gości Weselnych</p>
-                <p><b>19:30</b><br>Pierwszy taniec</p>
-                <p><b>20:30</b><br>Kolacja I</p>
-                <p><b>22:00</b><br>Tort</p>
-                <p><b>20:30</b><br>Kolacja II</p>
-                <p><b>00:00</b><br>Oczepiny</p>
-                <p><b>01:30</b><br>Barszczyk</p>
-                <p><b>??:??</b><br>Zakończenie imprezy do ostatniego gościa na parkiecie</p>
+                <p><b>14:00</b><br> Możliwość zameldowania w hotelu</p>
+                <p><b>16:00</b><br> Ślub w Kościele w Białej Rawskiej</p>
+                <p><b>17:00</b><br> Czas życzeń od Gości Ślubnych</p>
+                <p><b>17:30</b><br> Powitanie Młodych i wspólna fotografia</p>
+                <p><b>18:00</b><br> Obiad</p>
+                <p><b>19:00</b><br> Czas życzeń od Gości Weselnych</p>
+                <p><b>19:30</b><br> Pierwszy taniec</p>
+                <p><b>20:30</b><br> Kolacja I</p>
+                <p><b>22:00</b><br> Tort</p>
+                <p><b>20:30</b><br> Kolacja II</p>
+                <p><b>00:00</b><br> Oczepiny</p>
+                <p><b>01:30</b><br> Barszczyk</p>
+                <p><b>??:??</b><br> Zakończenie imprezy do ostatniego gościa na parkiecie</p>
             </div>
             <div class="d-flex flex-column gap-0 mb-1">
                 <h3>Niedziela, 15 czerwca</h3>
-                <p><b>11:00</b><br>Brunch Weselny w Pałacu Chojnata</p>
-                <p><b>12:00</b><br>Ostatni moment na wymeldowanie</p>
-                <p><b>15:00</b><br>Zakończenie</p>
+                <p><b>11:00</b><br> Brunch Weselny w Pałacu Chojnata</p>
+                <p><b>12:00</b><br> Ostatni moment na wymeldowanie</p>
+                <p><b>15:00</b><br> Zakończenie</p>
                 <p><b>I żyli długo i szczęśliwie!</b></p>
             </div>
         </header>
