--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@ layout: landing
         <header class="major">
             <h2>Noclegi</h2>
             <p><b>Aby odszukać swoje miejsce noclegu skorzystaj z arkusza.</b></p>
+
             <a href="https://docs.google.com/spreadsheets/d/13dec0vUvAOTG1mRGlv2wZupEPoe6nLv7/edit?usp=sharing&ouid=118388648363003039549&rtpof=true&sd=true"
                target="_blank"
-               class="button small mb-3">Wyszukiwanie noclegów</a>
+               class="button small mb-3">Arkusz noclegów</a>
+
             <p>Wystarczy wpisać swoje imię lub nazwisko w żółty obszar w komórce E1, a informacja o lokalizacji
                 miejscu zakwaterowania powinna pojawić się w pierwszej kolumnie. Poniżej znajdują się szczegoły i
                 dokładne lokalizacje poszczególnych noclegów.</p>
